<resources>
    <string name="app_name">Ruzzel</string>

    <!-- Beginscherm -->
    <string name="beginscherm_1">Avontuur</string>
    <string name="beginscherm_2">Workshop</string>

    <string name="menu_beginscherm_1">Reset voortgang</string>
    <string name="menu_beginscherm_2">Switch plaatjes</string>

    <!-- Avontuur -->
    <string name="avontuur_1">Kies een Wereld</string>
    <string name="avontuur_2">Kies een Level</string>

    <!-- Spel -->
    <string name="spel_1">Gewonnen!</string>
    <string name="spel_2">Verloren!</string>

    <!-- Levels -->
    <string name="level_1">10|10|verticaal|52|35|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,5,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,1,1,1,1,1,1,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,3,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>
    <string name="level_2">10|10|verticaal|52|69|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,4,1,1,0,0,0,0,0,0,1,0,1,1,0,0,0,0,1,1,1,1,1,1,0,0,0,0,0,0,0,1,1,1,1,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,3,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>
    <string name="level_3">10|10|verticaal|52|59|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,4,1,1,1,4,0,0,0,1,0,1,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,1,1,1,1,1,1,5,0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,1,1,0,0,0,0,0,0,0,1,1,4,0,0,0,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,3,0,0,0,0,0,0,0,0,0,0,0,2,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>
    <string name="level_4">10|10|verticaal|32|69|0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,0,4,0,0,0,1,1,1,1,1,0,1,0,0,0,1,1,1,1,1,1,1,1,0,0,0,1,0,1,1,1,1,1,0,0,0,4,0,1,0,0,0,0,0,0,1,0,1,1,1,1,0,5,0,0,1,1,1,1,1,1,0,1,0,0,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>
    <!--<string name="level_5">10|10|verticaal|12|89|0,0,0,0,0,0,0,0,0,0,0,1,1,10,1,1,1,0,4,0,0,0,0,0,0,1,1,0,1,0,0,4,1,1,1,1,1,0,1,0,0,1,0,1,1,1,1,1,1,0,0,1,1,6,1,1,1,6,1,0,0,1,0,1,1,1,1,1,1,0,0,1,1,1,1,0,0,0,0,0,0,1,1,1,1,1,10,1,5,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>-->
	<string name="level_5">10|10|verticaal|12|89|0,0,0,0,0,0,0,0,0,0,0,1,1,10,1,1,1,0,4,0,0,0,0,0,0,1,1,0,1,0,0,4,1,1,1,1,1,0,1,0,0,1,0,1,1,1,9,1,1,0,0,1,1,1,1,1,1,6,1,0,0,1,0,1,1,1,1,1,1,0,0,1,1,1,1,0,0,0,0,0,0,1,1,1,1,1,10,1,5,0,0,0,0,0,0,0,0,0,0,0|0,0,0,0,0,0,0,0,0,0,0,3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0</string>

    <!-- Workshop -->
    <string name="workshop_0">Zoek nieuwe levels\nof maak je eigen levels op:\n\nhttp://ruzzel.stefhost.nl</string>
    <string name="workshop_1">Code</string>
    <string name="workshop_2">Spel Zoeken</string>
    <string name="workshop_3">Tekst</string>
    <string name="workshop_4">Spel laden</string>
    <string name="workshop_5">Spel Starten</string>

</resources>